# interdependent-resistor-networks

./: .gitignore  README.md  better_fit.py  bf_test.py  conflict_fig1.py  conflict_fig2.py  conflict_fig3.py  create_rruns.py  create_rruns_ER.py  create_rruns_grid.py  create_rruns_lambda.py  create_single_results.py  create_single_rruns.py  fig1.py  fig2.py  fig3.py  fig4.py  fig5.py  fig6.py  fig7.py  fig8.py  fig9.py  figureManager.py  figureManager2.py  fix_mtxfiles.py  local_results.py  plot_sigma.py  process_failed.py  resnet.py  rrun.py  rrun_averager.py  theory.py
.github/workflows/: build_and_run.yml
idresnet/: CMakeLists.txt  geometric.cpp  jsonutils.hpp  main.cpp  main_topo.cpp  rnet.hpp  trianglevector2d.hpp  utilities.hpp
